--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="app_name" translatable="false">JAEM</string>
     <string name="cd_profile_button">Profilaktionen öffnen</string>
-    <string name="edit_profile">Profil wechseln</string>
+    <string name="edit_profile">Profil bearbeiten</string>
     <string name="share_profile">Profil teilen</string>
     <string name="search_for_profile">Nach Profil suchen</string>
     <string name="create_profile">Profil erstellen</string>
@@ -41,8 +41,11 @@
     <string name="cancel">Abbrechen</string>
     <string name="continue_">Weiter</string>
     <string name="close">Schließen</string>
+    <string name="profile_already_exists_title">Profile gibt es bereits</string>
+    <string name="profile_already_exists_message">Das geteilte Prodil ist bereits in deinen Kontakten.</string>
     <string name="shared_code_error_title">Fehler mit geteiltem code</string>
     <string name="shared_code_error_message">Es ist ein Fehler bei der erstellung des Profiles mit dem eingegebenen geteilten code entstanden.\nǓberprufe bitte die gültigkeit des Codes.</string>
+    <string name="shared_code_copied_from_clipboard">Code aus Zwischenablage kopiert</string>
 
     <string name="reply_bt">Antworten</string>
     <string name="close_bt">Schließen</string>
